--- a/order/kundvagn.html
+++ b/order/kundvagn.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Badande Badankor - Badankor för alla tänkbara tillfällen - Kundvagn</title>
+		<title>Kundvagn - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../style.css">
