--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="robots" content="noindex, nofollow">
-		<meta name="description" content="badanor för hela slanten!">
+		<meta name="description" content="Badande badankor - Sveriges största utbud av Badankor. Vi har badankor för hela slanten! Badankor med snabb och smidig leverans. Hitta din favorit-badanka!">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="js.js"></script>
@@ -41,7 +41,7 @@
 			</header>
 			<!-- SLUT header -->
 
-			
+
 			<!-- BÖRJAN menu -->
 			<form onsubmit="return false">
 			<nav id="main-nav">
@@ -70,7 +70,7 @@
 			</div>
 			<!-- SLUT menu -->
 
-			
+
 			<!-- BÖRJAN main -->
 			<main>
 				<div id="mySliderContainer">
@@ -115,7 +115,7 @@
 			<div class="clear"> </div>
 			<!-- SLUT main -->
 
-			
+
 			<!-- BÖRJAN footer -->
 			<footer>
 			<div id="servicelankar">
@@ -144,7 +144,7 @@
 			</footer>
 			<!-- SLUT footer -->
 
-			
+
 			<!-- W3C logos for valid HTML5 and CSS3 -->
 			<div class="clear"></div>
 			<div style="margin-top: 100px;">
