--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 				<div id="div-head">
 					<div id="head-left">
 						<div class="fl head-logo left">
-							<a href="index.html"><img src="images/logo_inv.png" alt="Badanka logo"></a>
+							<a href="index.html"><img src="images/logo_inv.png" alt="Badankor logo"></a>
 						</div>
 						<div class="fl">
-							<a href="index.html"><h1>Badarens Bad</h1></a>
+							<a href="index.html"><h4>Badarens Bad</h4></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
-							<a href="index.html"><img src="images/logo_inv_fliped.png" alt="Badanka logo"></a>
+							<a href="index.html"><img src="images/logo_inv_fliped.png" alt="Badankor logo"></a>
 						</div>
 					</div>
 					<div id="head-search">
@@ -98,8 +98,8 @@
 				<br>
 				<br>
 				<div class="text-produkter">
-					<h1>Populära badankor</h1>
-					<p>Här finner du våra populäraste badankor. För fler badankor använd sökfunktionen eller bläddra runt bland våra ankiga kategorier.</p>
+					<h1>Badankor - Populära</h1>
+					<p>Här finner du våra populäraste badankor. Vi är säkra på att vi har både en och två badankor i din smak. För fler badankor använd sökfunktionen eller bläddra runt bland våra kategorier fyllda med ankor.</p>
 				</div>
 				<div class="flex-produkter">
 					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div><div class="namn"><span>Badanka Brandman</span></div><div class="pris"><span>13kr</span></div></div></a>
