--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 			<main>
 				<div id="mySliderContainer">
 					<div class="mySlides"><a href="superhjaltar/batman.html"><img src="images/superhjaltar/batman-slide.jpg" alt="batman"></a></div>
-					<div class="mySlides"><a href="superhjaltar/superman.html"><img src="images/superhjaltar/superman-slide.jpg" alt="batman"></a></div>
-					<div class="mySlides"><a href="superhjaltar/superduck.html"><img src="images/superhjaltar/superduck-slide.jpg" alt="batman"></a></div>
-					<div class="mySlides"><a href="superhjaltar/superwoman.html"><img src="images/superhjaltar/superwoman-slide.jpg" alt="batman"></a></div>
-					<div class="mySlides"><a href="superhjaltar/wonderwoman.html"><img src="images/superhjaltar/wonderwoman-slide.jpg" alt="batman"></a></div>
-					<div class="mySlides"><a href="superhjaltar/spiderman.html"><img src="images/superhjaltar/spiderman-slide.jpg" alt="batman"></a></div>
+					<div class="mySlides"><a href="superhjaltar/superman.html"><img src="images/superhjaltar/superman-slide.jpg" alt="superman"></a></div>
+					<div class="mySlides"><a href="superhjaltar/superduck.html"><img src="images/superhjaltar/superduck-slide.jpg" alt="superduck"></a></div>
+					<div class="mySlides"><a href="superhjaltar/superwoman.html"><img src="images/superhjaltar/superwoman-slide.jpg" alt="superwoman"></a></div>
+					<div class="mySlides"><a href="superhjaltar/wonderwoman.html"><img src="images/superhjaltar/wonderwoman-slide.jpg" alt="wonderwoman"></a></div>
+					<div class="mySlides"><a href="superhjaltar/spiderman.html"><img src="images/superhjaltar/spiderman-slide.jpg" alt="spiderman"></a></div>
 					<div class="fl mySliderArrow mySliderArrowLeft" onclick="plusDivs(-1, 'r')">&#10094;</div>
 					<div class="fr mySliderArrow mySliderArrowRight" onclick="plusDivs(1, 'l')">&#10095;</div>
 					<h2>Nya superhjälteankor ENDAST 29kr</h2>
