--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
 			<!-- BÖRJAN main -->
 			<main>
+				<div class="slidercontainer">
 				<div id="mySliderContainer">
 					<div class="mySlides"><a href="superhjaltar/batman.html"><img src="images/superhjaltar/batman-slide.jpg" alt="batman"></a></div>
 					<div class="mySlides"><a href="superhjaltar/superman.html"><img src="images/superhjaltar/superman-slide.jpg" alt="superman"></a></div>
@@ -93,10 +94,10 @@
 					<span class="mySliderButton" onclick="currentDiv(5)"></span>
 					<span class="mySliderButton" onclick="currentDiv(6)"></span>
 				</div>
-
+				</div>
 				<div class="clear"> </div>
 				<br>
-				<br>
+				<div class="produkter">
 				<div class="text-produkter">
 					<h1>Badankor - Populära</h1>
 					<p>Här finner du våra populäraste badankor. Vi är säkra på att vi har både en och två badankor i din smak. För fler badankor använd sökfunktionen eller bläddra runt bland våra kategorier fyllda med ankor.</p>
@@ -109,6 +110,7 @@
 					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/pirat.jpg" alt="Gul badanka Pirat med kniv och bandana"></div><div class="namn"><span>Badanka Pirat</span></div><div class="pris"><span>13kr</span></div></div></a>
 					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/yrken/systemvetare.jpg" alt="Badanka Systemvetare 1337 h4x0r"></div><div class="namn"><span>Badanka Systemvetare</span></div><div class="pris"><span>1337kr</span></div></div></a>
 					<a href="#"><div class="child-produkter"><div class="produktbild"><img src="images/ovriga/magisk.jpg" alt="Lila glittrig badanka"></div><div class="namn"><span>Badanka Magisk</span></div><div class="pris"><span>37kr</span></div></div></a>
+				</div>
 				</div>
 				<div class="clear"></div>
 			</main>
