--- a/404.html
+++ b/404.html
@@ -20,7 +20,7 @@
 							<img src="images/logo_inv.png" alt="Duck logo">
 						</div>
 						<div class="fl">
-							<h1><a href=" ">Badarens Bad</a></h1>
+							<a href="index.html"><p id="rubrik">Badankor.nu</p></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
@@ -38,7 +38,7 @@
 			</header>
 			<!-- SLUT header -->
 
-			
+
 			<!-- BÖRJAN menu -->
 			<form onsubmit="return false">
 			<nav id="main-nav" class="mobile">
@@ -119,7 +119,7 @@
 			</footer>
 			<!-- SLUT footer -->
 
-			
+
 			<!-- W3C logos for valid HTML5 and CSS3 -->
 			<div class="clear"></div>
 			<div style="margin-top: 100px;">
