--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 	<body>
 		<div id="container">
 
-
 			<!-- BÖRJAN header -->
 			<header>
 				<div id="div-head">
@@ -23,7 +22,7 @@
 							<a href="index.html"><img src="images/logo_inv.png" alt="Badankor logo"></a>
 						</div>
 						<div class="fl">
-							<a href="index.html"><h4>Badarens Bad</h4></a>
+							<a href="index.html"><p id="rubrik">Badankor.nu</p></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
