--- a/superhjaltar/badankor_heros.html
+++ b/superhjaltar/badankor_heros.html
@@ -20,7 +20,7 @@
 							<a href="../index.html"><img src="../images/logo_inv.png" alt="Duck logo"></a>
 						</div>
 						<div class="fl">
-							<a href="../index.html"><h1>Badarens Bad</h1></a>
+							<a href="index.html"><p id="rubrik">Badankor.nu</p></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
@@ -38,7 +38,7 @@
 			</header>
 			<!-- SLUT header -->
 
-			
+
 			<!-- BÖRJAN menu -->
 			<form onsubmit="return false">
 			<nav id="main-nav" class="mobile">
@@ -68,7 +68,7 @@
 			</div>
 			<!-- SLUT menu -->
 
-			
+
 			<!-- BÖRJAN main -->
 			<div class="clear"></div>
 			<div id="nav-main">
@@ -102,7 +102,7 @@
 			<div class="clear"> </div>
 			<!-- SLUT main -->
 
-			
+
 			<!-- BÖRJAN footer -->
 			<footer>
 			<div id="servicelankar">
@@ -131,7 +131,7 @@
 			</footer>
 			<!-- SLUT footer -->
 
-			
+
 			<!-- W3C logos for valid HTML5 and CSS3 -->
 			<div class="clear"></div>
 			<div style="margin-top: 100px;">
