--- a/yrken/badankor_yrken.html
+++ b/yrken/badankor_yrken.html
@@ -20,7 +20,7 @@
 							<a href="../index.html"><img src="../images/logo_inv.png" alt="Duck logo"></a>
 						</div>
 						<div class="fl">
-							<a href="../index.html"><h1>Badarens Bad</a></h1>
+							<a href="index.html"><p id="rubrik">Badankor.nu</p></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
@@ -38,7 +38,7 @@
 			</header>
 			<!-- SLUT header -->
 
-			
+
 			<!-- BÖRJAN menu -->
 			<form onsubmit="return false">
 			<nav id="main-nav" class="mobile">
@@ -131,7 +131,7 @@
 			</footer>
 			<!-- SLUT footer -->
 
-			
+
 			<!-- W3C logos for valid HTML5 and CSS3 -->
 			<div class="clear"></div>
 			<div style="margin-top: 100px;">
