länk och alt-tag fix

--- a/404.html
+++ b/404.html
@@ -17,14 +17,14 @@
 				<div id="div-head">
 					<div id="head-left">
 						<div class="fl head-logo left">
-							<img src="images/logo_inv.png" alt="Duck logo">
+							<img src="images/logo_inv.png" alt="Badankor logo">
 						</div>
 						<div class="fl">
 							<a href="index.html"><p id="rubrik">Badankor.nu</p></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
-							<img src="images/logo_inv_fliped.png" alt="Duck logo">
+							<img src="images/logo_inv_fliped.png" alt="Badankor logo">
 						</div>
 					</div>
 					<div id="head-search">
