--- a/superhjaltar/badankor_heros.html
+++ b/superhjaltar/badankor_heros.html
@@ -17,14 +17,14 @@
 				<div id="div-head">
 					<div id="head-left">
 						<div class="fl head-logo left">
-							<a href="../index.html"><img src="../images/logo_inv.png" alt="Duck logo"></a>
+							<a href="../index.html"><img src="../images/logo_inv.png" alt="Badankor logo"></a>
 						</div>
 						<div class="fl">
-							<a href="index.html"><p id="rubrik">Badankor.nu</p></a>
+							<a href="../index.html"><p id="rubrik">Badankor.nu</p></a>
 							<p>Badankor för alla tillfällen!</p>
 						</div>
 						<div class="fl head-logo right">
-							<a href="../index.html"><img src="../images/logo_inv_fliped.png" alt="Duck logo"></a>
+							<a href="../index.html"><img src="../images/logo_inv_fliped.png" alt="Badankor logo"></a>
 						</div>
 					</div>
 					<div id="head-search">
