Fixa "antal" i kundvagn samt lockvaran

--- a/order/kundvagn.html
+++ b/order/kundvagn.html
@@ -97,7 +97,7 @@
 							<div class="r2"><a href="../yrken/badanka_systemvetare.html">Systemvetare</a></div>
 							<div class="r6">1337 kr</div>
 							<div class="r5">1337 kr</div>
-							<div class="r4">1 st</div>
+							<div class="r4"><input type="text" value="1"> st</div>
 							<div class="r3">8 st</div>
 						</div>
 						<div class="kundvagn-item kundvagn-item2">
@@ -105,7 +105,7 @@
 							<div class="r2"><a href="../ovriga/badanka_dracula.html">Dracula</a></div>
 							<div class="r6">111 kr</div>
 							<div class="r5">37 kr</div>
-							<div class="r4">3 st</div>
+							<div class="r4"><input type="text" value="3"> st</div>
 							<div class="r3">120 st</div>
 						</div>
 						<div class="kundvagn-item kundvagn-item1">
@@ -113,7 +113,7 @@
 							<div class="r2"><a href="../ovriga/badanka_rubix.html">Rubix</a></div>
 							<div class="r6">65 kr</div>
 							<div class="r5">13 kr</div>
-							<div class="r4">5 st</div>
+							<div class="r4"><input type="text" value="5"> st</div>
 							<div class="r3">36 st</div>
 						</div>
 						<div class="kundvagn-item kundvagn-item2">
@@ -121,7 +121,7 @@
 							<div class="r2"><a href="../superhjaltar/badanka_batman.html">Batman</a></div>
 							<div class="r6">130 kr</div>
 							<div class="r5">13 kr</div>
-							<div class="r4"><span style="color: #c00; text-shadow: 0 0 1px #f00;">10 st</span></div>
+							<div class="r4"><input type="text" value="10"><span style="color: #c00; text-shadow: 0 0 1px #f00;"> st</span></div>
 							<div class="r3">8 st</div>
 						</div>
 						<div class="kundvagn-item kundvagn-item-foot"> </div>
@@ -144,8 +144,9 @@
 						<form action="bestall.php" method="post">
 							<div class="fl" style="margin: 15px;">
 								<h3>Innan du beställer...</h3>
-								<p>Missa inte våra nyheter med extrapris direkt från start!</p>
-								<p>Klicka <a href="../superhjaltar/badankor_heros.html">HÄR</a> för att se produkterna.</p>
+								<a href="../yrken/badanka_systemvetare.html"><img src="../images/yrken/systemvetare.jpg" alt="systemvetare"></a>
+								<p>Missa inte chansen att köpa systemvetaranka för ett vädligt förmånligt pris!</p>
+								<p>Klicka <a href="../yrken/badanka_systemvetare.html">HÄR</a> för att se badankan.</p>
 
 								<h3 class="mt15">Erbjudande</h3>
 								<p>Tillåt oss att skicka erbjudande till er via e-post</p>
