Fixa "fel" antal.

--- a/order/kundvagn.html
+++ b/order/kundvagn.html
@@ -121,7 +121,7 @@
 							<div class="r2"><a href="../superhjaltar/badanka_batman.html">Batman</a></div>
 							<div class="r6">130 kr</div>
 							<div class="r5">13 kr</div>
-							<div class="r4"><input type="text" value="10"><span style="color: #c00; text-shadow: 0 0 1px #f00;"> st</span></div>
+							<div class="r4"><input style="color: #e00; box-shadow: inset 0 0 3px #c00;" type="text" value="10"><span style="color: #c00; text-shadow: 0 0 1px #f00;"> st</span></div>
 							<div class="r3">8 st</div>
 						</div>
 						<div class="kundvagn-item kundvagn-item-foot"> </div>
