--- a/order/kundvagn.html
+++ b/order/kundvagn.html
@@ -199,7 +199,7 @@
 				<p class="title">Servicelänkar</p>
 				<p><a href="../service/kundservice.html">Kundservice</a></p>
 				<p><a href="../service/returer.html">Returer</a></p>
-				<p><a href="https://www.dustinhome.se/service/integritetspolicy">Sekretesspolicy</a></p>
+				<p><a href="../service/policy.html">Sekretesspolicy</a></p>
 				<p><a href="../service/hjalp.html">Hjälp</a></p>
 				<p><a href="../service/kontakt.html">Kontakta oss</a></p>
 			</div>
