servicelänkar, alla utom kontakt

--- a/service/hjalp.html
+++ b/service/hjalp.html
@@ -82,9 +82,27 @@
 
 				<main id="right-main">
 
-					<h1>Hjälp</h1>
-					
-					<p>Nån text och kanske en liten liten bild?</p> 
+<h1>Hjälp</h1>
+
+<div id="service-div">
+<h2>Populära frågor och svar</h2>
+ 
+<h3>Hur lång leveranstid har vi på våra badankor?</h3>
+<p>Ditt paket levereras vanligtvis inom 3-5 vardagar om de finns i lager.</p>
+ 
+<h3>Vart tillverkas våra badankor?</h3>
+<p>Våra samarbetspartners finns i Guangzhou, Kina.</p>
+ 
+<h3>Vilket material används för att tillverka våra badankor?</h3>
+<p>Våra badankor är tillverkade i endast lagliga och beprövade material. De flesta ankorna är 
+tillverkade i äkta gummi, men vissa även äkta silikon.</p>
+ 
+<h3>Erbjuder ni öppet köp och ångerrätt?</h3>
+<p>Självklart har du öppet köp på dina ankor. 14 dagar gäller för öppet köp med ångerrätt.</p>
+ 
+<p>Har ni ytterligare frågor var inte rädd för att kontakta oss antingen via mejl info@badankor.nu
+eller per telefon 077-077077.</p>
+</div>
 
 					<div class="clear"> </div>
 				</main>
