--- a/service/kontakt.html
+++ b/service/kontakt.html
@@ -82,9 +82,11 @@
 
 				<main id="right-main">
 
-					<h1>Kontakta oss</h1>
-					
-					<p>Nån text och kanske en liten liten bild?</p> 
+<h1>Kontakta oss</h1>
+
+<div id="service-div">
+
+</div>
 
 					<div class="clear"> </div>
 				</main>
