--- a/service/policy.html
+++ b/service/policy.html
@@ -84,7 +84,7 @@
 
 <h1>Sekretesspolicy</h1>
 
-<div id="policy">
+<div id="policy-div">
 <h2>1. Allmänt</h2>
 <p>Badankor.nu AB:s vill med denna integritetspolicy visa hur vi säkerställer att dina
 personuppgifter behandlas i enlighet med den svenska personuppgiftslagstiftningen.</p>
