--- a/service/returer.html
+++ b/service/returer.html
@@ -82,9 +82,24 @@
 
 				<main id="right-main">
 
-					<h1>Returer</h1>
-					
-					<p>Nån text och kanske en liten liten bild?</p> 
+<h1>Returer</h1>
+
+<div id="service-div">
+<p>Motsvarade inte ankorna dina förväntningar, eller vill du byta anka? Här finner du information om
+vad som händer när du har skickat en retur eller gjort ett byte. Tänk på att du har 14 dagar på dig 
+på att bestämma dig för om du önskar behålla dina ankor, räknat ifrån att du mottog ankorna.
+Kom ihåg att det är du som kund som ansvarar för returen fram till att vi har mottagit och 
+registrerat den, så spara alltid ditt inlämningskvitto. Det kan ibland ta upp till 14 dagar 
+för en retur att komma till oss och behandlas på vårt lager.</p>
+
+<h2>Kostar det något att göra en retur?</h2>
+<p>Ja, det tillkommer returporto á 39 kr när du väljer att göra en retur.</p>
+<h2>Har ni mottagit min retur?</h2>
+<p>Du kommer få en returbekräftelse via mail så fort vi mottagit din retur. Det kan ibland ta upp 
+till 14 dagar för en retur att komma till oss och behandlas på vårt lager.</p>
+<h2>Får jag returnera rea-varor?</h2>
+<p>Självklart! Du har samma retur- och bytesrätt för alla ankor du handlar hos oss.</p>
+</div>
 
 					<div class="clear"> </div>
 				</main>
