--- a/superhjaltar/badankor_heros.html
+++ b/superhjaltar/badankor_heros.html
@@ -88,7 +88,7 @@
 				  </div>
 				    <div class="clear"></div>
 				  <div class="flex-produkter">
-				    <a href="batman.html"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/batman.jpg" alt="Badanka Batman"></div><div class="namn"><span>Badanka Batman</span></div><div class="pris"><span>13kr</span></div></div></a>
+				    <a href="badanka_batman.html"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/batman.jpg" alt="Badanka Batman"></div><div class="namn"><span>Badanka Batman</span></div><div class="pris"><span>13kr</span></div></div></a>
 				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/spiderman.jpg" alt="Badanka Spindelmannen"></div><div class="namn"><span>Badanka Spindelmannen</span></div><div class="pris"><span>37kr</span></div></div></a>
 				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superwoman.jpg" alt="Badanka Superwoman"></div><div class="namn"><span>Badanka Superwoman</span></div><div class="pris"><span>37kr</span></div></div></a>
 				    <a href="#"><div class="child-produkter"><div class="produktbild"><img src="../images/superhjaltar/superman.jpg" alt="Badanka Superman"></div><div class="namn"><span>Badanka Superman</span></div><div class="pris"><span>13kr</span></div></div></a>
