--- a/yrken/badanka_detektiv.html
+++ b/yrken/badanka_detektiv.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Badanka Brandman - Badande Badankor - Badankor för alla!</title>
+		<title>Badanka Detektiv - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../style.css">
@@ -84,16 +84,16 @@
 
 				<main id="right-main">
 					<div class="text-produkter">
-				    <h1>Badanka Brandman</h1>
+				    <h1>Badanka Detektiv</h1>
 				  </div>
 				    <div class="clear"></div>
 						<div class="produkt-info">
 							<div class="produkt-info-left">
-								<div class="produktbild_produktsida"><img src="../images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div>
+								<div class="produktbild_produktsida"><img src="../images/yrken/detektiv.jpg" alt="Gul badanka Detektiv med hatt"></div>
 
 							</div>
 							<div class="produkt-info-right">
-								 <p>Vår populära badanka med brandmanstema. Badankan mäter 8cm i diameter. </p>
+								 <p>Vår populära badanka med detektiv utseende, komplett med pipa och ful hatt. Badankan mäter 20cm i diameter. </p>
 								 <br><br>
 
 								<form name="buy">
