--- a/superhjaltar/badanka_batman.html
+++ b/superhjaltar/badanka_batman.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Badanka Brandman - Badande Badankor - Badankor för alla!</title>
+		<title>Badanka Batman - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="../style.css">
@@ -84,20 +84,20 @@
 
 				<main id="right-main">
 					<div class="text-produkter">
-				    <h1>Badanka Brandman</h1>
+				    <h1>Badanka Batman</h1>
 				  </div>
 				    <div class="clear"></div>
 						<div class="produkt-info">
 							<div class="produkt-info-left">
-								<div class="produktbild_produktsida"><img src="../images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div>
+								<div class="produktbild_produktsida"><img src="../images/superhjaltar/batman.jpg" alt="Svart badanka Batman"></div>
 
 							</div>
 							<div class="produkt-info-right">
-								 <p>Vår populära badanka med brandmanstema. Badankan mäter 8cm i diameter. </p>
+								 <p>Vår populära Batmanbadanka. Solid badanka i guld* handmålad i batmantema. Badankan mäter 16cm i diameter. *flyter </p>
 								 <br><br>
 
 								<form name="buy">
-									<span class="pris">Pris: 137kr</span>
+									<span class="pris">Pris: 7777kr</span>
 									<br>
 									<br>
 
