--- a/service/kontakt.html
+++ b/service/kontakt.html
@@ -86,6 +86,16 @@
 
 <div id="service-div">
 
+<h2>Öppettider och kontaktinformation</h2>
+<p>Ni finner oss på besökadress Ankvägen 404, 404 04, Ankeborg.</p>
+<h3>Telefon</h3>
+<p>077-0770777</p>
+<p>Måndag - Fredag: 09.00 - 11.30</p>
+
+<h3>E-post</h3>
+<p>info@badankor.nu</p>
+
+	
 </div>
 
 					<div class="clear"> </div>
