här vare produkter

--- a/ovriga/badanka_enorm.html
+++ b/ovriga/badanka_enorm.html
@@ -85,20 +85,20 @@
 
 				<main id="right-main">
 					<div class="text-produkter">
-				    <h1>Badanka Brandman</h1>
+				    <h1>Badanka Enorm</h1>
 				  </div>
 				    <div class="clear"></div>
 						<div class="produkt-info">
 							<div class="produkt-info-left">
-								<div class="produktbild_produktsida"><img src="../images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div>
+								<div class="produktbild_produktsida"><img src="../images/ovriga/badanka_enorm.jpg" alt="Enorm uppblåsbar gul badanka"></div>
 
 							</div>
 							<div class="produkt-info-right">
-								 <p>Vår populära badanka med brandmanstema. Badankan mäter 8cm i diameter. </p>
+								 <p>Vår största badanka. Badanka enorm är en uppblåsbar badanka som mäter drygt 180cm på höjden. Ta ett djupt andetag och börja fylla på denna enorma badanka med lyft. Detta är badankan för dig som vill synas på stranden, eller i bådhamnen. Varför inte ha med denna badanka i släptåg på din båt? </p>
 								 <br><br>
 
 								<form name="buy">
-									<span class="pris">Pris: 137kr</span>
+									<span class="pris">Pris: 299kr</span>
 									<br>
 									<br>
 
