--- a/ovriga/badanka_magisk.html
+++ b/ovriga/badanka_magisk.html
@@ -59,7 +59,7 @@
 				<ul>
 					<li><a href="../index.html">Hem</a> <span> / </span></li>
 					<li><a href="../badankor_ovriga.html">Badankor Övriga</a> <span> / </span></li>
-					<li><a href="#">Badanka Enorm</a> <span> / </span></li>
+					<li><a href="#">Badanka Magisk</a> <span> / </span></li>
 				</ul>
 			</nav>
 
@@ -85,7 +85,7 @@
 
 				<main id="right-main">
 					<div class="text-produkter">
-				    <h1>Badanka Brandman</h1>
+				    <h1>Badanka Magisk</h1>
 				  </div>
 				    <div class="clear"></div>
 						<div class="produkt-info">
@@ -94,11 +94,11 @@
 
 							</div>
 							<div class="produkt-info-right">
-								 <p>Vår populära badanka med brandmanstema. Badankan mäter 8cm i diameter. </p>
+								 <p>Vår lila, glittrande badanka. En populär anka hos våra yngre kunder. Badankan mäter 8cm i diameter. </p>
 								 <br><br>
 
 								<form name="buy">
-									<span class="pris">Pris: 137kr</span>
+									<span class="pris">Pris: 37kr</span>
 									<br>
 									<br>
 
