--- a/yrken/badanka_systemvetare.html
+++ b/yrken/badanka_systemvetare.html
@@ -93,7 +93,7 @@
 
 							</div>
 							<div class="produkt-info-right">
-								 <p>Vår populära systemvetarbadanka. Allt du kan förvänta dig, laptop, blue tooth och matchande slipps. Badankan mäter 13.37cm i diameter. </p>
+								 <p>Vår populära systemvetarbadanka. Allt du kan förvänta dig, laptop, bluetooth och matchande slips. Badankan mäter 13.37cm i diameter. </p>
 								 <br><br>
 
 								<form name="buy">
