--- a/ovriga/badankor_ovriga.html
+++ b/ovriga/badankor_ovriga.html
@@ -84,14 +84,14 @@
 				<main id="right-main">
 					<div class="text-produkter">
 				    <h1>Övriga ankiga produkter</h1>
-				    <p>Här hittar du badankor och andra ankliknande produkter. Nedan listas våra badankor och andra plaskvänliga artiklar som vi tillhandahåller. </p>
+				    <p>Här hittar du badankor och andra ankliknande produkter. Badankorna i denna kategori är för den som vill sticka ut. Vi garanterar att dessa ankor kommer bidra till ett plaskigare liv. Passa på att köpa en badanka hög som en fullvuxen människa. Perfekt för att synas på stranden. Eller varför inte polisernas favoritanka, en badanka med utsendet som en donut! </p>
 				  </div>
 				    <div class="clear"></div>
 				  <div class="flex-produkter">
+						<a href="badanka_dracula.html"><div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/dracula.jpg" alt="Vit vampyrbadanka med blod"></div><div class="namn"><span>Badanka Dracula</span></div><div class="pris"><span>37kr</span></div></div></a>
 				    <a href="badanka_enorm.html"><div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/badanka_enorm.jpg" alt="Enorm uppblåsbar gul badanka"></div><div class="namn"><span>Badanka Enorm</span></div><div class="pris"><span>299kr</span></div></div></a>
-				    <a href="badanka_dracula.html"><div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/dracula.jpg" alt="Vit vampyrbadanka med blod"></div><div class="namn"><span>Badanka Dracula</span></div><div class="pris"><span>37kr</span></div></div></a>
 				    <a href="badanka_magisk.html"><div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/magisk.jpg" alt="Lila glittrig badanka"></div><div class="namn"><span>Badanka Magisk</span></div><div class="pris"><span>37kr</span></div></div></a>
-				    <a href="badanka_mugg.html"><div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/munk.jpg" alt="Donut-badanka med rosa glasyr och strössel"></div><div class="namn"><span>Badanka Munk</span></div><div class="pris"><span>13kr</span></div></div></a>
+				    <a href="badanka_munk.html"><div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/munk.jpg" alt="Donut-badanka med rosa glasyr och strössel"></div><div class="namn"><span>Badanka Munk</span></div><div class="pris"><span>13kr</span></div></div></a>
 				    <a href="badanka_realistisk.html"><div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/realistisk.jpg" alt="Brun and med grönt huvud"></div><div class="namn"><span>Badanka Realistisk</span></div><div class="pris"><span>13kr</span></div></div></a>
 						<a href="badanka_rubix.html"><div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/rubix.jpg" alt="Badanka med Rubiks kub-mönster"></div><div class="namn"><span>Badanka Rubiks kub</span></div><div class="pris"><span>13kr</span></div></div></a>
 						<a href="badanka_strand.html"><div class="child-produkter"><div class="produktbild"><img src="../images/ovriga/strand.jpg" alt="Gul badanka med solglasögon och baddräkt"></div><div class="namn"><span>Badanka Strand</span></div><div class="pris"><span>13kr</span></div></div></a>
