--- a/ovriga/tshirt_keep_calm.html
+++ b/ovriga/tshirt_keep_calm.html
@@ -59,7 +59,7 @@
 				<ul>
 					<li><a href="../index.html">Hem</a> <span> / </span></li>
 					<li><a href="../badankor_ovriga.html">Badankor Övriga</a> <span> / </span></li>
-					<li><a href="#">Badanka Enorm</a> <span> / </span></li>
+					<li><a href="#">Badanka Keep Calm</a> <span> / </span></li>
 				</ul>
 			</nav>
 
@@ -85,12 +85,12 @@
 
 				<main id="right-main">
 					<div class="text-produkter">
-				    <h1>Badanka Brandman</h1>
+				    <h1>T-shirt Keep Calm</h1>
 				  </div>
 				    <div class="clear"></div>
 						<div class="produkt-info">
 							<div class="produkt-info-left">
-								<div class="produktbild_produktsida"><img src="../images/yrken/brandman.jpg" alt="Gul badanka Brandman med hjälm"></div>
+								<div class="produktbild_produktsida"><img src="../images/ovriga/tshirt_keep_calm.jpg" alt="Vit T-shirt med badanka och klok text"></div>
 
 							</div>
 							<div class="produkt-info-right">
@@ -102,6 +102,13 @@
 									<br>
 									<br>
 
+									<span>Storlek: </span>
+									<select name="size">
+  								<option value="S">S</option>
+									<option value="M">M</option>
+									<option value="L">L</option>
+									<option value="XL">XL</option>
+									<br>
 									<span>Antal: </span><input type="text" name="antal" pattern="[0-9]" title="Ange antal:" size="2" value="1">
 									<input type="submit" value="Lägg i kundvagn">
 							</div>
