Yrken: Meta description och robots.

--- a/yrken/badanka_brandman.html
+++ b/yrken/badanka_brandman.html
@@ -4,6 +4,8 @@
 		<title>Badanka Brandman - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badankan Brandman: Denna badanka passar utmärkt när eldsvåda har uppstått i badkaret. Pris: 137kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
