--- a/yrken/badanka_pirat.html
+++ b/yrken/badanka_pirat.html
@@ -4,6 +4,8 @@
 		<title>Badanka Pirat - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badankan Pirat: Passar utmärkt för den vågiga badkarsmiljön. Pris: 137kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
@@ -89,7 +91,7 @@
 				    <div class="clear"></div>
 						<div class="produkt-info">
 							<div class="produkt-info-left">
-								<div class="produktbild_produktsida"><img src="../images/yrken/pirat.jpg" alt="Gul badanka Pirat" height="300px width="300px"></div>
+								<div class="produktbild_produktsida"><img src="../images/yrken/pirat.jpg" alt="Gul badanka Pirat" height=300 width=300></div>
 
 							</div>
 							<div class="produkt-info-right">
