--- a/yrken/badanka_detektiv.html
+++ b/yrken/badanka_detektiv.html
@@ -4,6 +4,8 @@
 		<title>Badanka Detektiv - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badankan Detektiv: Tappat något i badkaret? då är det denna anka du söker. Pris: 137kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
