--- a/yrken/badanka_doktor.html
+++ b/yrken/badanka_doktor.html
@@ -4,6 +4,8 @@
 		<title>Badanka Doktor - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badankan Doktor: Användbar när vattnet i badkaret har blivit kontaminerat. Sjuk billgt pris! Pris: 13kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
