--- a/yrken/badanka_systemvetare.html
+++ b/yrken/badanka_systemvetare.html
@@ -4,6 +4,8 @@
 		<title>Badanka Systemvetare - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badankan Systemvetare: När koden måste följa med i badkaret. Pris: 1337kr">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
