--- a/yrken/badankor_yrken.html
+++ b/yrken/badankor_yrken.html
@@ -4,6 +4,8 @@
 		<title>Badankor Yrken - Badande Badankor - Badankor för alla!</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="robots" content="noindex, nofollow">
+		<meta name="description" content="Badankor med temat yrke så som badankan pirat och badankan systemvetare">
 		<link rel="stylesheet" type="text/css" href="../style.css">
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 		<script src="../js.js"></script>
